--- a/assets/sass/local-group.scss
+++ b/assets/sass/local-group.scss
@@ -1,3 +1,47 @@
 @import "typography";
 @import "layout";
 @import "color";
+@media (min-width: 37.5em)
+{
+    html.g-
+    {
+        border-top:0;
+        background-image: none;
+    }
+    
+    .g- body {
+        background: url(../images/css/asia-topographic.png) 90% -1.75em/30% no-repeat #fff;
+    /*    border-top: 0.5em solid #f9c287; */
+    }
+}
+
+@media (min-width: 50em)
+{
+    html.g- {
+        padding-left: 0;
+        padding-right: 0;
+    }
+
+    .g- body {
+        padding-left: 2%;
+        padding-right: 2%;
+    }
+}
+
+@media (min-width: 62.5em)
+{
+    .g- body {
+        max-width: none;
+        margin: 0 auto;
+    }
+    
+    .g- .PageContentInner {
+        max-width: 75em;
+        margin: 0 auto;
+    }
+}
+@media (min-width: 37.5em) {
+.g- .u-Masthead__siteName {
+    margin-top: 0;
+}
+}
